# BakBeatTranscoder

./: Cargo.toml  README.md  THIRD-PARTY-LICENSES  release-signing-pubkey.asc
.github/workflows/: deploy.yml  test.yml  windows-build.yml
profiles/: creative-zen-nano-plus-wma.toml  generic-aac-128.toml  generic-aac-256.toml  generic-flac.toml  generic-mp3-128.toml  generic-mp3-192.toml  generic-mp3-320.toml  generic-ogg-192.toml  himd-sp.toml  minidisc-lp2.toml  minidisc-lp4.toml  minidisc-sp.toml
src/: binaries.rs  cli.rs  error.rs  executor.rs  gapless.rs  graph.rs  main.rs  planner.rs  probe.rs  profiles.rs  progress.rs  resolver.rs  verifier.rs
src/adapters/: atrac.rs  ffmpeg.rs  mod.rs
