[package]
name = "bakbeat-transcoder"
version = "0.1.0"
edition = "2021"
description = "Deterministic audio transcoder for BakBeat device sync"
license = "MPL-2.0"
repository = "https://github.com/BakBeat/BakBeatTranscoder"
rust-version = "1.75"

[[bin]]
name = "bbt"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Audio probing — MPL-2.0, compatible with our license
# Symphonia is our metadata/format authority; FFmpeg is only an execution adapter
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "vorbis", "wav", "ogg", "isomp4", "aiff", "all-codecs"] }

# Hashing for deterministic graph IDs and artifact verification
sha2 = "0.10"
hex = "0.4"

# Graph node IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Timestamps in graph/manifest
chrono = { version = "0.4", features = ["serde"] }

# Cross-platform binary detection
which = "6"

# Temp files for ATRAC intermediate WAV
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Terminal output
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
